--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "ng2-datepicker": "^2.1.8",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "@angular/cli": "1.6.3",
